all: Fix options list to hide ToC
Change-Id: Ic5a8c92c2f81f80a9f2250f3766b83e7daa87778
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/abandonware/index.org
+++ b/docs/abandonware/index.org
@@ -2,7 +2,7 @@
 #+EMAIL: rzr@users.sf.net
 #+AUTHOR: Philippe Coval <purl.org/rzr> #OpenFest2020 2020-11-08
 
-#+OPTIONS: num:nil, timestamp:nil, toc:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: https://www.openfest.org/2020/wp-content/themes/initfest/img/logo-2020.png
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.05
