--- a/docs/flows/index.org
+++ b/docs/flows/index.org
@@ -2,7 +2,7 @@
 #+AUTHOR: Philippe Coval <purl.org/rzr> #RennesEmbedded
 #+EMAIL: rzr@users.sf.net
 
-#+OPTIONS: num:nil, timestamp:nil, toc:nil, tags:nil, ^:nil, tag:nil, italic:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil tags:nil ^:nil tag:nil italic:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: https://res.cloudinary.com/ideation/image/upload/w_200,h_44,c_fit,q_auto,f_auto,dpr_auto/gqupegjtpk2cgg7a5gjj
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.1
@@ -15,7 +15,7 @@
 #+REVEAL_SLIDE_HEADER:
 #+REVEAL_THEME: night
 #+REVEAL_PLUGINS: (highlight)
-#+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil num:nil reveal_single_file:t"))))
+#+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil num:nil reveal_single_file:t toc:nil"))))
 #+ATTR_HTML: :width 5% :align right
 
 * 
