--- a/docs/index.org
+++ b/docs/index.org
@@ -1,11 +1,11 @@
 #+TITLE: RzR's Slides
 #+AUTHOR: Philippe Coval <https://purl.org/rzr>
 #+EMAIL: rzr@users.sf.net
-#+OPTIONS: num:nil, timestamp:nil, toc:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil
 #+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@4.1.0/
 #+REVEAL_HLEVEL: 1
 #+REVEAL_THEME: night
-#+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil, timestamp:nil, reveal_title_slide:nil"))))
+#+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil timestamp:nil reveal_title_slide:nil"))))
 {{{tags-on-export}}}
 
 * RzR's Presentations
