--- a/docs/oniro-template/index.org
+++ b/docs/oniro-template/index.org
@@ -2,7 +2,7 @@
 #+AUTHOR: TODO Name oniroproject.org #Oniro
 #+EMAIL: TODO@oniroproject.org
 
-#+OPTIONS: num:nil, timestamp:nil, toc:nil, tags:nil, tag:nil, ^:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil tags:nil tag:nil ^:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: https://oniroproject.org/images/shapes.png
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.15
