--- a/docs/nuttx/index.org
+++ b/docs/nuttx/index.org
@@ -2,7 +2,7 @@
 #+AUTHOR: Philippe Coval <purl.org/rzr> #NuttX 2021
 #+EMAIL: rzr@users.sf.net
 
-#+OPTIONS: num:nil, timestamp:nil, toc:nil, tags:nil, tag:nil, ^:nil, reveal_title_slide:t, italic:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil tags:nil tag:nil ^:nil reveal_title_slide:t italic:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: ./images/nuttx-2021-bg.png
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.2
