--- a/docs/sensors-webthings/index.org
+++ b/docs/sensors-webthings/index.org
@@ -2,7 +2,7 @@
 #+AUTHOR: Philippe Coval <purl.org/rzr> #SFK20
 #+EMAIL: rzr@users.sf.net
 
-#+OPTIONS: num:nil, timestamp:nil, toc:nil, tags:nil, ^:nil, tag:nil, italic:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil tags:nil ^:nil tag:nil italic:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: https://flossk.org/wp-content/uploads/2020/08/photo5922555276513358804-1170x780.jpg
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.02
