--- a/docs/twins/index.org
+++ b/docs/twins/index.org
@@ -1,7 +1,7 @@
 #+TITLE: Twins
 #+EMAIL: rzr@users.sf.net
 #+AUTHOR: Philippe Coval <purl.org/rzr> #TIV20 2020-02-15
-#+OPTIONS: num:nil, timestamp:nil, toc:nil
+#+OPTIONS: num:nil timestamp:nil toc:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: http://techinn.vitrecommunaute.bzh/wp-content/uploads/2017/12/TIV_Logo_Simple-01.png
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.05
